--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                <div class="row">
+                <div class="row justify-content-center">
                     {{ team }}
                 </div>
             </div>
